[gd_scene load_steps=28 format=3 uid="uid://drqhcogfqie2c"]

[ext_resource type="Script" path="res://scripts/base_scene.gd" id="1_blcgl"]
[ext_resource type="Texture2D" uid="uid://rjxv2x5cf1tk" path="res://assets/maps/Buildings.png" id="2_ome6b"]
[ext_resource type="Texture2D" uid="uid://cbamgwvxtikj8" path="res://assets/maps/cave_scenary.png" id="3_kr3va"]
[ext_resource type="Texture2D" uid="uid://6xcfn4hptbqe" path="res://assets/maps/ocean_scenary.png" id="4_w2jjj"]
[ext_resource type="Texture2D" uid="uid://cbb1bimtuklr" path="res://assets/maps/forest_scenary.png" id="5_jtxms"]
[ext_resource type="Texture2D" uid="uid://n53wx8hkjwib" path="res://assets/maps/volcano_scenary.png" id="5_lqf4d"]
[ext_resource type="Texture2D" uid="uid://b1rk1o1d5wpij" path="res://assets/maps/underworld_scenary.png" id="6_4e77y"]
[ext_resource type="Texture2D" uid="uid://bkb27d0shut10" path="res://assets/maps/Npcs.png" id="7_kex3e"]
[ext_resource type="Script" path="res://scripts/GameBoard.gd" id="8_j5jqv"]
[ext_resource type="PackedScene" uid="uid://cxw07d4aolqom" path="res://Scenes/unit_overlay.tscn" id="9_jnrs3"]
[ext_resource type="PackedScene" uid="uid://c7kp4dqt5tp2t" path="res://Scenes/UnitPath.tscn" id="10_8su7g"]
[ext_resource type="PackedScene" uid="uid://ds0qgx8dx1bl3" path="res://Scenes/cursor.tscn" id="11_7l7s4"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Scenes/Unit.tscn" id="12_tbre6"]
[ext_resource type="Texture2D" uid="uid://b0rysftmhnnl7" path="res://assets/sprites/Chicken_Knight.png" id="13_x7ywe"]
[ext_resource type="Texture2D" uid="uid://rmjco8s43d3s" path="res://assets/sprites/frog.png" id="14_vgh1w"]
[ext_resource type="Texture2D" uid="uid://dikterqphbrud" path="res://assets/sprites/Pig_Wizard.png" id="15_317aq"]
[ext_resource type="Texture2D" uid="uid://brigrw3huae2" path="res://assets/sprites/Volcaneer.png" id="17_ob8nw"]
[ext_resource type="Texture2D" uid="uid://dsf2sbdiq8q20" path="res://assets/sprites/Volcaneer_Familiar.png" id="18_gb6sp"]
[ext_resource type="Texture2D" uid="uid://dgf8ij0up4p8q" path="res://assets/sprites/Volcaneer_Golem.png" id="19_rmpa0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rwx7s"]
texture = ExtResource("2_ome6b")
texture_region_size = Vector2i(64, 64)
0:3/size_in_atlas = Vector2i(3, 3)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-83.4386, -84.8528, 82.0244, -84.8528, 76.3675, 89.0955, -77.7818, 89.0955)
0:0/size_in_atlas = Vector2i(3, 3)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-83.4386, -84.8528, 82.0244, -84.8528, 76.3675, 89.0955, -77.7818, 89.0955)
3:2/size_in_atlas = Vector2i(7, 4)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(32, 32)
3:2/0/y_sort_origin = 64
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-232.108, -119.324, 160.16, -119.855, 160.532, -35.5345, 140.184, -35.8857, 141.952, 79.7263, 15.2028, 78.8424, 12.3744, -11.6673, -85.9135, -10.253, -85.2064, 79.5495, -202.409, 78.6656, -204.531, -36.2392, -216.198, -37.2999, -216.198, -99.8788, -232.108, -101.647)
10:0/size_in_atlas = Vector2i(3, 3)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
10:3/size_in_atlas = Vector2i(3, 3)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
13:1/size_in_atlas = Vector2i(7, 5)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-211.023, -143.675, 215.513, -143.675, 213.268, 148.165, -204.288, 152.655)
20:0/size_in_atlas = Vector2i(3, 3)
20:0/0 = 0
20:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
20:3/size_in_atlas = Vector2i(3, 3)
20:3/0 = 0
20:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
23:1/size_in_atlas = Vector2i(7, 5)
23:1/0 = 0
23:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-211.023, -143.675, 215.513, -143.675, 213.268, 148.165, -204.288, 152.655)
0:6/size_in_atlas = Vector2i(5, 8)
0:6/0 = 0
5:6/size_in_atlas = Vector2i(3, 5)
5:6/0 = 0
14:12/size_in_atlas = Vector2i(6, 3)
14:12/0 = 0
10:6/size_in_atlas = Vector2i(6, 6)
10:6/0 = 0
20:6/size_in_atlas = Vector2i(6, 6)
20:6/0 = 0
26:6/size_in_atlas = Vector2i(3, 4)
26:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_be4p3"]
texture = ExtResource("3_kr3va")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 8, 32, 9, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(15.5, 11.5, 32, 10.5, 32, 32, 15.5, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.5, -32, 32, -32, 32, 32, 17, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:1/0 = 0
9:0/0 = 0
3:1/0 = 0
1:1/0 = 0
0:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 8.5, 32, 8, 32, 32, -32, 32)
1:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 10, -12.5, 10, -12, 32, -32, 32)
8:2/0 = 0
9:2/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -15, -32, -15, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.5, -32, 32, -32, 32, 32, 17, 32)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -14.5, -32, -14.5, 32, -32, 32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -15, -32, -15, 32, -32, 32)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:4/0 = 0
9:4/0 = 0
9:5/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -14.5, -32, -14, -10, -32, -11)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -15.5, -32, -15.5)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(13, -32, 32, -32, 32, 32, 13.5, 32)
4:5/0 = 0
8:5/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
9:8/0 = 0
8:8/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
4:6/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(14.5, -32, 32, -32, 32, -10.5, 14.5, -9)
0:5/size_in_atlas = Vector2i(2, 2)
0:5/0 = 0
3:5/size_in_atlas = Vector2i(1, 2)
3:5/0 = 0
0:7/size_in_atlas = Vector2i(2, 2)
0:7/0 = 0
2:7/size_in_atlas = Vector2i(2, 2)
2:7/0 = 0
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ifhc"]
texture = ExtResource("4_w2jjj")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.125, -27.125, -18.625, -29.875, 32, -32, -32, -32, -32, 32, -29.875, -19.625)
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(27.125, -27.125, 18.625, -29.875, -32, -32, 32, -32, 32, 32, 29.875, -19.625)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 32, -32, 32, -8.30851, 13.875, -7.875, 13.375, 32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, -7.625, -32, -8.125, -32, -32)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 32, -32, -32, -32, -32, -8.30851, -13.875, -7.875, -13.375, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, -32, -32, -32, 32)
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 32, -32, 32, -32, 32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.125, 32, 11.875, -32, -32, -32, -32, 32)
7:3/0 = 0
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.125, 32, -11.875, -32, 32, -32, 32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.125, 27.125, -18.625, 29.875, 32, 32, -32, 32, -32, -32, -29.875, 19.625)
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(27.125, 27.125, 18.625, 29.875, -32, 32, 32, 32, 32, -32, 29.875, 19.625)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, 8.30851, 13.875, 7.875, 13.375, -32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, 7.625, 32, 8.125, 32, 32)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, 8.30851, -13.875, 7.875, -13.375, -32)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
5:5/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.7096, -64.261, 31.1483, 63.1385, -31.7095, 63.6997, -33.3932, -64.8222)
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_37nlp"]
texture = ExtResource("5_lqf4d")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m1xqd"]
texture = ExtResource("5_jtxms")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jhoil"]
texture = ExtResource("6_4e77y")
texture_region_size = Vector2i(64, 64)
7:1/0 = 0
8:1/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
1:0/size_in_atlas = Vector2i(1, 2)
1:0/0 = 0
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
1:2/size_in_atlas = Vector2i(1, 2)
1:2/0 = 0
2:2/size_in_atlas = Vector2i(1, 2)
2:2/0 = 0
0:4/size_in_atlas = Vector2i(1, 2)
0:4/0 = 0
1:4/size_in_atlas = Vector2i(1, 2)
1:4/0 = 0
2:4/size_in_atlas = Vector2i(1, 2)
2:4/0 = 0
4:0/size_in_atlas = Vector2i(1, 2)
4:0/0 = 0
5:0/size_in_atlas = Vector2i(1, 2)
5:0/0 = 0
6:0/size_in_atlas = Vector2i(1, 2)
6:0/0 = 0
4:2/size_in_atlas = Vector2i(1, 2)
4:2/0 = 0
4:4/0 = 0
4:5/size_in_atlas = Vector2i(1, 2)
4:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ia0n"]
texture = ExtResource("7_kex3e")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_2b8dh"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_be4p3")
sources/0 = SubResource("TileSetAtlasSource_rwx7s")
sources/2 = SubResource("TileSetAtlasSource_3ifhc")
sources/4 = SubResource("TileSetAtlasSource_m1xqd")
sources/5 = SubResource("TileSetAtlasSource_jhoil")
sources/6 = SubResource("TileSetAtlasSource_6ia0n")
sources/3 = SubResource("TileSetAtlasSource_37nlp")

[node name="Main" type="Node2D"]
script = ExtResource("1_blcgl")

[node name="EntranceMarkers" type="Node2D" parent="."]
position = Vector2(-1, 0)

[node name="any" type="Marker2D" parent="EntranceMarkers"]
visible = false
position = Vector2(-393, -27)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2b8dh")
format = 2
layer_0/name = "Backgroud"
layer_0/tile_data = PackedInt32Array(-8, 131074, 3, 65528, 131074, 3, 131064, 131074, 3, 196600, 131074, 3, 262136, 131074, 3, 327672, 131074, 3, 393208, 131074, 3, 458744, 131074, 3, 524280, 131074, 3, 589816, 131074, 3, -7, 131074, 3, 65529, 131074, 3, 131065, 131074, 3, 196601, 131074, 3, 262137, 131074, 3, 327673, 131074, 3, 393209, 131074, 3, 458745, 131074, 3, 524281, 131074, 3, 589817, 131074, 3, -6, 131074, 3, 65530, 131074, 3, 131066, 131074, 3, 196602, 131074, 3, 262138, 131074, 3, 327674, 131074, 3, 393210, 131074, 3, 458746, 131074, 3, 524282, 131074, 3, 589818, 131074, 3, 655354, 131074, 3, 720890, 131074, 3, -5, 131074, 3, 65531, 131074, 3, 131067, 131074, 3, 196603, 131074, 3, 262139, 131074, 3, 327675, 131074, 3, 393211, 131074, 3, 458747, 131074, 3, 524283, 131074, 3, 589819, 131074, 3, 655355, 131074, 3, 720891, 131074, 3, -4, 131074, 3, 65532, 131074, 3, 131068, 131074, 3, 196604, 131074, 3, 262140, 131074, 3, 327676, 131074, 3, 393212, 131074, 3, 458748, 131074, 3, 524284, 131074, 3, 589820, 131074, 3, 655356, 131074, 3, 720892, 131074, 3, -3, 131074, 3, 65533, 131074, 3, 131069, 131074, 3, 196605, 131074, 3, 262141, 131074, 3, 327677, 131074, 3, 393213, 131074, 3, 458749, 131074, 3, 524285, 131074, 3, 589821, 131074, 3, 655357, 131074, 3, 720893, 131074, 3, -65538, 131074, 3, -2, 131074, 3, 65534, 131074, 3, 131070, 131074, 3, 196606, 131074, 3, 262142, 131074, 3, 327678, 131074, 3, 393214, 131074, 3, 458750, 131074, 3, 524286, 131074, 3, 589822, 131074, 3, 655358, 131074, 3, 720894, 131074, 3, -65537, 131074, 3, 589823, 131074, 3, 655359, 131074, 3, 720895, 131074, 3, -131072, 131074, 3, 0, 327683, 7, 65536, 65540, 4, 131072, 327683, 7, 196608, 65540, 4, 262144, 327683, 7, 327680, 65540, 4, 524288, 131074, 3, 589824, 131074, 3, 655360, 131074, 3, -131071, 131074, 3, 1, 65540, 4, 65537, 327683, 7, 131073, 65540, 4, 196609, 327683, 7, 262145, 65540, 4, 327681, 327683, 7, 524289, 131074, 3, 589825, 131074, 3, 655361, 131074, 3, -131070, 131074, 3, 2, 327683, 7, 65538, 65540, 4, 131074, 327683, 7, 196610, 65540, 4, 262146, 327683, 7, 327682, 65540, 4, 524290, 131074, 3, 589826, 131074, 3, 655362, 131074, 3, -131069, 131074, 3, 3, 65540, 4, 65539, 327683, 7, 131075, 65540, 4, 196611, 327683, 7, 262147, 65540, 4, 327683, 327683, 7, 524291, 131074, 3, 589827, 131074, 3, 655363, 131074, 3, -131068, 131074, 3, 4, 327683, 7, 65540, 65540, 4, 131076, 327683, 7, 196612, 65540, 4, 262148, 327683, 7, 327684, 65540, 4, 524292, 131074, 3, 589828, 131074, 3, 655364, 131074, 3, -131067, 131074, 3, 5, 65540, 4, 65541, 327683, 7, 131077, 65540, 4, 196613, 327683, 7, 262149, 65540, 4, 327685, 327683, 7, 524293, 131074, 3, 589829, 131074, 3, 655365, 131074, 3, -131066, 131074, 3, 6, 327683, 7, 65542, 65540, 4, 131078, 327683, 7, 196614, 65540, 4, 262150, 327683, 7, 327686, 65540, 4, 524294, 131074, 3, 589830, 131074, 3, 655366, 131074, 3, -131065, 131074, 3, 7, 65540, 4, 65543, 327683, 7, 131079, 65540, 4, 196615, 327683, 7, 262151, 65540, 4, 327687, 327683, 7, 524295, 131074, 3, 589831, 131074, 3, 655367, 131074, 3, -131064, 131074, 3, 524296, 131074, 3, 589832, 131074, 3, 655368, 131074, 3, -131063, 131074, 3, -65527, 131074, 3, 9, 131074, 3, 65545, 131074, 3, 131081, 131074, 3, 196617, 131074, 3, 262153, 131074, 3, 327689, 131074, 3, 393225, 131074, 3, 458761, 131074, 3, 524297, 131074, 3, 589833, 131074, 3, 655369, 131074, 3, -131062, 131074, 3, -65526, 131074, 3, 10, 131074, 3, 65546, 131074, 3, 131082, 131074, 3, 196618, 131074, 3, 262154, 131074, 3, 327690, 131074, 3, 393226, 131074, 3, 458762, 131074, 3, 524298, 131074, 3, 589834, 131074, 3, 655370, 131074, 3, -131061, 131074, 3, -65525, 131074, 3, 11, 131074, 3, 65547, 131074, 3, 131083, 131074, 3, 196619, 131074, 3, 262155, 131074, 3, 327691, 131074, 3, 393227, 131074, 3, 458763, 131074, 3, 524299, 131074, 3, 589835, 131074, 3, 655371, 131074, 3, -131060, 131074, 3, -65524, 131074, 3, 12, 131074, 3, 65548, 131074, 3, 131084, 131074, 3, 196620, 131074, 3, 262156, 131074, 3, 327692, 131074, 3, 393228, 131074, 3, 458764, 131074, 3, 524300, 131074, 3, 589836, 131074, 3, 655372, 131074, 3, -131059, 131074, 3, -65523, 131074, 3, 13, 131074, 3, 65549, 131074, 3, 131085, 131074, 3, 196621, 131074, 3, 262157, 131074, 3, 327693, 131074, 3, 393229, 131074, 3, 458765, 131074, 3, -131058, 131074, 3, -65522, 131074, 3, 14, 131074, 3, 65550, 131074, 3, 131086, 131074, 3, 196622, 131074, 3, 262158, 131074, 3, 327694, 131074, 3, 393230, 131074, 3, 458766, 131074, 3, -196619, 131074, 3, -131083, 131074, 3, -65547, 131074, 3, -11, 131074, 3, 65525, 131074, 3, 131061, 131074, 3, 196597, 131074, 3, 262133, 131074, 3, 327669, 131074, 3, 393205, 131074, 3, 458741, 131074, 3, 524277, 131074, 3, 589813, 131074, 3, -196618, 131074, 3, -131082, 131074, 3, -65546, 131074, 3, -10, 131074, 3, 65526, 131074, 3, 131062, 131074, 3, 196598, 131074, 3, 262134, 131074, 3, 327670, 131074, 3, 393206, 131074, 3, 458742, 131074, 3, 524278, 131074, 3, 589814, 131074, 3, -196617, 131074, 3, -131081, 131074, 3, -65545, 131074, 3, -9, 131074, 3, 65527, 131074, 3, 131063, 131074, 3, 196599, 131074, 3, 262135, 131074, 3, 327671, 131074, 3, 393207, 131074, 3, 458743, 131074, 3, 524279, 131074, 3, 589815, 131074, 3, -196616, 131074, 3, -131080, 131074, 3, -65544, 131074, 3, -196615, 131074, 3, -131079, 131074, 3, -65543, 131074, 3, -196614, 131074, 3, -131078, 131074, 3, -65542, 131074, 3, -262149, 131074, 3, -196613, 131074, 3, -131077, 131074, 3, -65541, 131074, 3, -262148, 131074, 3, -196612, 131074, 3, -131076, 131074, 3, -65540, 131074, 3, -262147, 131074, 3, -196611, 131074, 3, -131075, 131074, 3, -65539, 131074, 3, -262146, 131074, 3, -196610, 131074, 3, -131074, 131074, 3, -262145, 131074, 3, -196609, 131074, 3, -131073, 131074, 3, -327680, 131074, 3, -262144, 131074, 3, -196608, 131074, 3, -327679, 131074, 3, -262143, 131074, 3, -196607, 131074, 3, -327678, 131074, 3, -262142, 131074, 3, -196606, 131074, 3, -327677, 131074, 3, -262141, 131074, 3, -196605, 131074, 3, -327676, 131074, 3, -262140, 131074, 3, -196604, 131074, 3, -327675, 131074, 3, -262139, 131074, 3, -196603, 131074, 3, -327674, 131074, 3, -262138, 131074, 3, -196602, 131074, 3, -327673, 131074, 3, -262137, 131074, 3, -196601, 131074, 3, -327672, 131074, 3, -262136, 131074, 3, -196600, 131074, 3, -327671, 131074, 3, -262135, 131074, 3, -196599, 131074, 3, -327670, 131074, 3, -262134, 131074, 3, -196598, 131074, 3, -327669, 131074, 3, -262133, 131074, 3, -196597, 131074, 3, -327668, 131074, 3, -262132, 131074, 3, -196596, 131074, 3, -262131, 131074, 3, -196595, 131074, 3, -262130, 131074, 3, -196594, 131074, 3, -327692, 131074, 3, -262156, 131074, 3, -196620, 131074, 3, -131084, 131074, 3, -65548, 131074, 3, -12, 131074, 3, 65524, 131074, 3, 131060, 131074, 3, 196596, 131074, 3, 262132, 131074, 3, 327668, 131074, 3, 393204, 131074, 3, 458740, 131074, 3, 524276, 131074, 3, 589812, 131074, 3, 655348, 131074, 3, 720884, 131074, 3, -327691, 131074, 3, -262155, 131074, 3, 655349, 131074, 3, 720885, 131074, 3, -327690, 131074, 3, -262154, 131074, 3, 655350, 131074, 3, 720886, 131074, 3, -327689, 131074, 3, -262153, 131074, 3, 655351, 131074, 3, 720887, 131074, 3, -327688, 131074, 3, -262152, 131074, 3, 655352, 131074, 3, 720888, 131074, 3, -327687, 131074, 3, -262151, 131074, 3, 655353, 131074, 3, 720889, 131074, 3, -327686, 131074, 3, -262150, 131074, 3, -327685, 131074, 3, -327684, 131074, 3, -327683, 131074, 3, -327682, 131074, 3, -327667, 131074, 3, -327666, 131074, 3, -327665, 131074, 3, -262129, 131074, 3, -196593, 131074, 3, -131057, 131074, 3, 524301, 131074, 3, 589837, 131074, 3, 655373, 131074, 3, 524302, 131074, 3, 589838, 131074, 3, 655374, 131074, 3, -65521, 131074, 3, 15, 131074, 3, 65551, 131074, 3, 131087, 131074, 3, 196623, 131074, 3, 262159, 131074, 3, 327695, 131074, 3, 393231, 131074, 3, 458767, 131074, 3, 524303, 131074, 3, 589839, 131074, 3, 655375, 131074, 3, -1, 131074, 3, 65535, 131074, 3, 131071, 131074, 3, 196607, 131074, 3, 262143, 131074, 3, 327679, 131074, 3, 393215, 131074, 3, 458751, 131074, 3, 524287, 131074, 3, 393216, 131074, 3, 458752, 131074, 3, 393217, 131074, 3, 458753, 131074, 3, 393218, 131074, 3, 458754, 131074, 3, 393219, 131074, 3, 458755, 131074, 3, 393220, 131074, 3, 458756, 131074, 3, 393221, 131074, 3, 458757, 131074, 3, 393222, 131074, 3, 458758, 131074, 3, 393223, 131074, 3, 458759, 131074, 3, 393224, 131074, 3, 458760, 131074, 3, -65528, 131074, 3, 8, 131074, 3, 65544, 131074, 3, 131080, 131074, 3, 196616, 131074, 3, 262152, 131074, 3, 327688, 131074, 3, -65536, 131074, 3, -65535, 131074, 3, -65534, 131074, 3, -65533, 131074, 3, -65532, 131074, 3, -65531, 131074, 3, -65530, 131074, 3, -65529, 131074, 3)
layer_1/name = "Rocks"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(524279, 196611, 8, -9, 65539, 6, -131080, 131075, 6, -131079, 131075, 7, -131077, 196611, 8, -131076, 65539, 6, -131075, 131075, 6, -262138, 65539, 6, -196601, 3, 7, -196600, 3, 7, -196599, 131075, 7, -131063, 131075, 6, -131062, 65539, 6, 327694, 65539, 7, 655368, 3, 7, 655369, 65539, 6, 524290, 131075, 7, 524289, 3, 6, 589822, 65539, 7, 655358, 131075, 6, 655354, 65539, 6, 589818, 65539, 7, 196601, 131075, 7, 196602, 3, 6, 327676, 3, 3, 262142, 131075, 7, 262141, 131075, 7, 327670, 196611, 8, -196609, 3, 7, -262139, 131075, 6, 131083, 196611, 8, 393212, 3, 4, 458748, 3, 5, 327677, 65539, 3, 393213, 65539, 4, 458749, 65539, 5, 327678, 131075, 3, 393214, 131075, 4, 458750, 131075, 5)
layer_2/name = "Horizonal Walls"
layer_2/tile_data = PackedInt32Array(458751, 65538, 4, 524287, 65538, 5, 393216, 131074, 4, 458752, 131074, 5, 393217, 131074, 4, 458753, 131074, 5, 393218, 131074, 4, 458754, 131074, 5, 393219, 131074, 4, 458755, 131074, 5, 393220, 131074, 4, 458756, 131074, 5, 393221, 131074, 4, 458757, 131074, 5, 393222, 131074, 4, 458758, 131074, 5, 393223, 131074, 4, 458759, 131074, 5, 393224, 196610, 4, 458760, 196610, 5, -1, 65538, 2, -65536, 131074, 2, -65535, 131074, 2, -65534, 131074, 2, -65533, 131074, 2, -65532, 131074, 2, -65531, 131074, 2, -65530, 131074, 2, -65529, 131074, 2, -65528, 196610, 2, 65535, 65538, 3, 131071, 65538, 3, 196607, 65538, 3, 262143, 65538, 3, 327679, 65538, 3, 393215, 65538, 3, 8, 196610, 3, 65544, 196610, 3, 131080, 196610, 3, 196616, 196610, 3, 262152, 196610, 3, 327688, 196610, 3, 262138, 65539, 0, 262139, 131075, 0, 262141, 3, 0, 65533, 65539, 1, 131070, 65539, 1, 65529, 65539, 1, 131064, 65539, 1, -131077, 327683, 0, -65541, 327683, 1, -131076, 393219, 0, -65540, 393219, 1, -131075, 458755, 0, -65539, 458755, 1, -131074, 327683, 0, -65538, 327683, 1, -131073, 393219, 0, -65537, 393219, 1, -196608, 458755, 0, -131072, 458755, 1, -196607, 327683, 0, -131071, 327683, 1, -196606, 393219, 0, -131070, 393219, 1, -196605, 458755, 0, -131069, 458755, 1, -196604, 327683, 0, -131068, 327683, 1, -196603, 393219, 0, -131067, 393219, 1, -196602, 458755, 0, -131066, 458755, 1, -196601, 327683, 0, -131065, 327683, 1, -196600, 393219, 0, -131064, 393219, 1, -196599, 458755, 0, -131063, 458755, 1, -196598, 458755, 2, -131062, 458755, 3, -65526, 458755, 4, 10, 458755, 4, 65546, 458755, 4, 131082, 458755, 4, 196618, 458755, 4, 262154, 458755, 5, 9, 3, 1, 65545, 3, 1, 131081, 131075, 1, 196617, 131075, 1, 262153, 131075, 1, 196602, 3, 1)
layer_3/name = "Vertical Walls"
layer_4/name = "Objects"
layer_4/tile_data = PackedInt32Array(-5, 196611, 0, 65531, 196611, 1, 131067, 196611, 2, -4, 262147, 0, 65532, 262147, 1, 131068, 262147, 2)
layer_5/name = "Houses"
layer_5/y_sort_enabled = true
layer_6/name = "Carts"

[node name="Camera2D" type="Camera2D" parent="TileMap"]
position = Vector2(254, 196)
zoom = Vector2(1.1, 1.1)
limit_smoothed = true
position_smoothing_enabled = true

[node name="Gameboard" type="Node2D" parent="."]
script = ExtResource("8_j5jqv")

[node name="UnitOverlay" parent="Gameboard" instance=ExtResource("9_jnrs3")]
layer_0/modulate = Color(1, 1, 1, 0.6)

[node name="UnitPath" parent="Gameboard" instance=ExtResource("10_8su7g")]
visible = false

[node name="Cursor" parent="Gameboard" instance=ExtResource("11_7l7s4")]
y_sort_enabled = true
position = Vector2(0, 1)

[node name="ChickenKnight" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(168, 400)
move_range = 3
move_speed = 400.0
class_type = "golem"
skin = ExtResource("13_x7ywe")
skin_offset = Vector2(0, 170)

[node name="FrogSheriff" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(373, 387)
move_range = 3
move_speed = 350.0
hframes = 1
class_type = "familiar"
skin = ExtResource("14_vgh1w")
skin_offset = Vector2(330, 465)

[node name="PigWizard" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(252, 396)
move_range = 3
move_speed = 375.0
hframes = 3
class_type = "summoner"
skin = ExtResource("15_317aq")
skin_offset = Vector2(0, 170)

[node name="Summoner" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(357, -33)
move_range = 4
move_speed = 300.0
hframes = 8
vframes = 6
class_type = "summoner"
skin = ExtResource("17_ob8nw")
skin_offset = Vector2(0, 170)

[node name="Familiar" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(256, -32)
move_range = 3
move_speed = 275.0
hframes = 10
class_type = "familiar"
skin = ExtResource("18_gb6sp")
skin_offset = Vector2(0, 460)

[node name="Golem" parent="Gameboard" instance=ExtResource("12_tbre6")]
y_sort_enabled = true
position = Vector2(171, -28)
move_range = 3
move_speed = 250.0
hframes = 10
class_type = "golem"
skin = ExtResource("19_rmpa0")
skin_offset = Vector2(0, 460)

[connection signal="accept_pressed" from="Gameboard/Cursor" to="Gameboard" method="_on_cursor_accept_pressed"]
[connection signal="moved" from="Gameboard/Cursor" to="Gameboard" method="_on_cursor_moved"]
